tests/toy/neg/001635_mutation.toylang
program a = { while a do sleep then; } .
